tests/baselines/reference/noImplicitAnyMissingGetAccessor(target=es2015).errors.txt
noImplicitAnyMissingGetAccessor.ts(3,25): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
noImplicitAnyMissingGetAccessor.ts(3,33): error TS7006: Parameter 'str' implicitly has an 'any' type.
noImplicitAnyMissingGetAccessor.ts(8,16): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
noImplicitAnyMissingGetAccessor.ts(8,24): error TS7006: Parameter 'str' implicitly has an 'any' type.


==== noImplicitAnyMissingGetAccessor.ts (4 errors) ====
    abstract class Parent
    {
        public abstract set message(str);
                            ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                                    ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
    }
    
    class Child extends Parent {
        _x: any;
        public set message(str) {
                   ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                           ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
            this._x = str;
        }
    }